nn/tests/snapshots/snapshot_tests__silu_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 406
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    3
  ],
  "data": [
    -0.2689414322376251,
    0.0,
    0.7310585975646973
  ]
}
