nn/tests/snapshots/snapshot_tests__softmax_basic.snap
---
source: nn/tests/snapshot_tests.rs
assertion_line: 307
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "shape": [
    3
  ],
  "data": [
    0.09003057330846786,
    0.2447284758090973,
    0.6652409434318542
  ]
}
